# django_test_task

./: Dockerfile  Makefile  pyproject.toml
docker_compose/: app.yaml
docker_compse/: app.yaml
src/config/: env_settings.py  settings.py  urls.py
src/main/: urls.py
src/main/static/main/css/: style.css
src/main/templates/main/: layout.html  main.html
src/main/templates/main/components/: navbar.html
